This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
3/5/24: Fixed frame sums before requesting MRC frame from a Falcon 4 so tuning
of camera timing can be checked/iterated without revisiting dialog (In 4.1).

3/1/24: Added ability to return a string value directly from a generic plugin
function and to set script variables from a plugin.

3/1/24: Fixed setting reported values from plugin functions with 1 or 2
returned doubles (In 4.1).

2/29/24: Split the View/Search defocus and shift offset controls into two rows
and added Auto buttons to find the shift offsets automatically.

2/29/24: Fixed some log output coming out the wrong color or even when output
is deferred.

2/29/24: Allowed SetItemAcquire to turn off Acquire for item in range being
acquired, and added argument to SkipAcquiringNavItem to turn off its Acquire.

2/29/24: Fixed double counting item skipped in main script as done (In 4.1).

2/28/24: Fixed assignment to variables on ReportNavItem line (In 4.1).

2/28/24:  SEM_4-2-0beta3
2/28/24: Prevented some unneeded updates when using SuspendNavUpdate and
stopped getting stage position from scope when adding points marked on buffer;
fixed a crash using that with collapsed groups (In 4.1).

2/28/24: Fixed setting variables on command line for ReportCurrentBuffer and
ReportActiveViewTitle (In 4.1).

2/27/24: SEM_4-1-6
2/27/24: Fixed initial angle set from lines in high-focus mag calibration to
omit adjustments for high focus (In 4.1).

2/27/24: Added script command to set variables for many scope state values
without a call to the scope.

2/27/24: Fixed display of beam and focus increments in Scope Control panel.

2/24/24: Fixed debug output from threads not coming out gray.
