@@ -493,6 +493,7 @@ struct NavAcqParams {
   BOOL runEndMacro;         // Flag for whether to run it
   BOOL realignToScaledMap;  // Flag to do Realign to Item to scaled map
   int conSetForScaledAli;   // Control set to use for it
+  BOOL skipZinRunAtNearest; // Skip Z move when running task at nearest item
 };
 
 // Other Nav parameters
