@@ -554,7 +554,7 @@ public:
   void RemoveAutosaveFile(void);
   void SavePreCombineFile(void);
   int GetStockFilename(void);
-  int MoveToItem(int index, bool skipZ = false);
+  int MoveToItem(int index, BOOL skipZ = false);
   void ProcessAkey(BOOL ctrl, BOOL shift);
   void AddCirclePolygon(float radius);
   int DoAddCirclePolygon(float radius, float stageX, float stageY, BOOL useMarker, CString &mess);
