@@ -231,7 +231,7 @@
       microscopes but could be counterproductive elsewhere.&nbsp; You should use it
       only if it has been verified that drift does indeed settle faster, using the
       &#39;TestRelaxingStage&#39; script command.</P>
-    <P><b>Skip Z moves in initial move and Realign</b></P>
+    <P><b>Skip Z in:&nbsp; Initial move and Realign</b></P>
     <P>Select this option to leave the Z height unchanged in the stage move to
       the item&#39;s location, and in Realign to Item if it is run.&nbsp; Otherwise, the Z height
       will be set to the Z value of the item in the initial move, and to the Z value
@@ -240,6 +240,10 @@
       would be useful if the Z heights of the items are not correct and eucentricity
       is run on only a subset of points, provided that Z height is approximately the
       same from one point to another between runs of a eucentricity routine.</P>
+    <P><strong>Skip Z in: ... Run at nearest</strong></P>
+    <P>Select this option to stay at the current Z value when running a task at the 
+      nearest item with a matching note or label, instead of moving to the Z of that 
+      item.</P>
     <P><b>Skip stage move to item if possible</b></P>
     <P>This option is disabled and its setting has no effect except when a script is 
       run before or as the primary action.&nbsp; Select this option to suppress a 
